--- a/Python 데이터 분석/Pandas 기초/Series_DataFrame.ipynb
+++ b/Python 데이터 분석/Pandas 기초/Series_DataFrame.ipynb
@@ -18,7 +18,7 @@
    "id": "80a36eb6-a1d0-4fa5-9cd1-ae19b220165b",
    "metadata": {},
    "source": [
-    "### Series 만들기"
+    "# Series 만들기"
    ]
   },
   {
